# angie-configurator

./: README.md  pyproject.toml  requirements.txt
docs/: USER_GUIDE.md
src/angie_configurator/: app.py  cli.py  cloudflare.py  config_loader.py  core.py  renderer.py  schema.py  server.py  ssl_manager.py  test_renderer.py  validator.py
src/angie_configurator/templates/: proxy.j2  static.j2  wordpress.j2
